--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,43 @@
     <dependencies>
 	<dependency>
 	  <groupId>com.typesafe.akka</groupId>
-	  <artifactId>akka-actor_2.10</artifactId>
-	  <version>2.2.3</version>
+	  <artifactId>akka-actor_2.12</artifactId>
+	  <version>2.5.4</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-jmx_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-core_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-system-metrics_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-akka-2.5_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-scala_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.kamon</groupId>
+	  <artifactId>kamon-jdbc_2.12</artifactId>
+	  <version>0.6.7</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.aspectj</groupId>
+	  <artifactId>aspectjweaver</artifactId>
+	  <version>1.8.10</version>
 	</dependency>
     </dependencies>
 <build>
